--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YB2KZCSKFY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YB2KZCSKFY');
+    </script>
     <title>Hextris - Play the Classic Hexagonal Tetris Game Online </title>
     <meta name="description" content="Play Hextris online - A modern twist on the classic Tetris game with hexagonal blocks. Challenge your spatial awareness and reflexes in this addictive puzzle game.">
     <link rel="canonical" href="https://goldensentence.xyz" />
