--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         gtag('js', new Date());
         gtag('config', 'G-YB2KZCSKFY');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9968033564053793"
+    crossorigin="anonymous"></script>
     <title>Daily Wisdom - Inspiration for Life</title>
     <meta name="description" content="Daily inspirational quotes to ignite your potential and illuminate your path">
     <link rel="canonical" href="https://goldensentence.xyz" />
